--- a/package.json
+++ b/package.json
@@ -27,8 +27,13 @@
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.3.9",
+    "@nestjs/platform-ws": "^9.3.9",
     "@nestjs/swagger": "^6.2.1",
     "@nestjs/throttler": "^4.0.0",
+    "@nestjs/websockets": "^9.3.9",
+    "@shopify/shopify-api": "^6.2.0",
+    "@socket.io/redis-adapter": "^8.1.0",
     "@types/passport-local": "^1.0.35",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
@@ -37,14 +42,18 @@
     "joi": "^17.7.1",
     "module-alias": "^2.2.2",
     "mongoose": "^6.9.1",
+    "mongoose-paginate-v2": "^1.7.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "socket.io": "^4.6.1",
+    "ws": "^8.12.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
+    "@nestjs/schedule": "^2.2.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/cookie-parser": "^1.4.3",
@@ -53,6 +62,7 @@
     "@types/node": "18.11.18",
     "@types/passport-jwt": "^3.0.8",
     "@types/supertest": "^2.0.11",
+    "@types/ws": "^8.5.4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
